k8s/services/favourite-service/favourite-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favourite-service
  namespace: ecommerce-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favourite-service
  template:
    metadata:
      labels:
        app: favourite-service
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: favourite-service
        image: selimhorri/favourite-service-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8800
