k8s/services/favourite-service/favourite-service-s.yaml
apiVersion: v1
kind: Service
metadata:
  name: favourite-service
  namespace: ecommerce-microservice
spec:
  type: ClusterIP
  selector:
    app: favourite-service
  ports:
  - port: 8800
    targetPort: 8800
